@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false

'left to right direction

skinparam classAttributeIconSize 0

hide circle
hide methods


class Agent {
    name
    email
    passport
    taxNumber
    address
    phoneNumber
}



class Announcement {
    status
    date

}



class House {
     numberOfBedrooms
     numberOfBathroom
     numberOfParkingSpaces
     availableEquipment
     existenceOfBasement
     inhabitableLoft
     sunExposure
}

class Apartment {
     numberOfBedrooms
     numberOfBathroom
     numberOfParkingSpaces
     availableEquipment

}
class Land {

}

class Commission {
    commissionValue
}

class Property {
     area
     distance_from_the_city_centre
     price
     photographs
     numberOfMonthsRent
     typeofBusiness


}


class Location{
    street
    zipCode
    doorNumber
}
class City{
    cityName
}

class District{
    districtName

}
class State{
    stateName
}
class Owner{
        name
        phoneNumber
        email
}

class Notification{
        propertyID
        publicationDate
        agentName
        agentPhoneNumber
}




Announcement "1" -- "1" Property: contains >
Agent "1" -- "*" Announcement: publish >
House "1" --"1" Property: is >
Apartment"1" -- "1" Property: is >
Land"1" - "1" Property: is >
Announcement"1" - "1" Commission: it has >
Property "1" - "1"Location: it has >
Location "1" - "1" City: contains >
City "1" - "1" District: contains >
District "1" - "1" State: contains >
Owner "1" -- "*" Announcement : requests >
Agent "1" -- "1" Notification : sends >
Notification "1" - "1" Owner : sent to >
Notification "1" - "1" Announcement : contains >










@enduml